--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,8 +38,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.Hibernate_Validator_5.2.4.classpath}:\
-    ${file.reference.postgresql-9.4-1202.jdbc42.jar}:\
-    ${libs.Hibernate_4.3.11_JPA_2.1.classpath}
+    ${libs.Hibernate_4.3.11_JPA_2.1.classpath}:\
+    ${file.reference.postgresql-9.4-1202.jdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
